Fix: Years aside sticky can be too long on sm devices
This fix ports the changes from b268346 to the 'archive.html` page's
years aside --- adding a max-height and overflow scrollbars, along with
style tweaks to make the sticky aside stand out better from the text
flowing beneath it. See the commit message for b268346 for more details
and justification.

This commit also refactors those changes a bit to make the class names
more generic, so that the same classes can be reused between these two
index pages consistently. The aside portions of these two pages have
likewise been refactored for a more consistent structure.

--- a/_sass/asides.scss
+++ b/_sass/asides.scss
@@ -1,3 +1,26 @@
+.aside-index {
+  @include media-breakpoint-down(sm) {
+    background: linear-gradient(to top, rgba($white, 0), $white 10%);
+    margin-top: -2rem;
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+  }
+
+  .aside-index-list {
+    @include media-breakpoint-down(sm) {
+      max-height: 25vh;
+      overflow: auto;
+    }
+
+    border: 1px solid $border-color;
+    box-shadow: $box-shadow-sm;
+  }
+}
+
+
 .aside {
   @extend .alert;
 
